--- a/app/app.html
+++ b/app/app.html
@@ -12,9 +12,9 @@
         You maybe have disabled JavaScript and Frames, please enable JavaScript or frames in You
         browser. More info:
         <br />
-        <a href="http://tutorial.com/how-to-enable-js">How to enable JavaScript</a>
+        <a href="https://tutorial.com/how-to-enable-js">How to enable JavaScript</a>
         <br />
-        <a href="http://tutorial.com/how-to-enable-frames">How to enable frames</a>
+        <a href="https://tutorial.com/how-to-enable-frames">How to enable frames</a>
       </noframes>
     </noscript>
   </body>
